--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@nuxtjs/i18n": "^10.2.1",
     "@pinia/nuxt": "^0.11.3",
     "@vueuse/motion": "^3.0.3",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
