--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "@nuxtjs/i18n": "^10.2.1",
     "@pinia/nuxt": "^0.11.3",
     "@vueuse/motion": "^3.0.3",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
+    "v-network-graph": "^0.9.22",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/d3": "^7.4.3",
     "@types/node": "^25.0.6"
   }
 }
