--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify-json/heroicons": "^1.2.3",
+    "@iconify-json/material-symbols-light": "^1.2.53",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/octicon": "^1.2.19",
     "@iconify-json/uil": "^1.2.3",
