--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
     "v-network-graph": "^0.9.22",
-    "vue": "^3.5.26",
+    "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@iconify-json/mdi-light": "^1.2.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/d3": "^7.4.3",
     "@types/node": "^25.0.6"
