--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@nuxtjs/i18n": "^10.2.1",
     "@pinia/nuxt": "^0.11.3",
     "@vueuse/motion": "^3.0.3",
+    "chart.js": "^4.5.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
-    "v-network-graph": "^0.9.22",
     "vue": "^3.5.27",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
