--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@nuxtjs/i18n": "^10.2.1",
     "@pinia/nuxt": "^0.11.3",
     "@vueuse/motion": "^3.0.3",
-    "chart.js": "^4.5.1",
+    "apexcharts": "^5.3.6",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "nuxt": "^4.2.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
-    "vue-chartjs": "^5.3.3",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue3-apexcharts": "^1.10.0"
   },
   "devDependencies": {
     "@iconify-json/mdi-light": "^1.2.2",
